# vector-match

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth.py  0003_user_int_id_audit.py  0004_external_sync.py  0005_api_keys.py  0006_user_allow_api_key.py  c9639efcc9da_user_roles_and_approval.py
backend/src/vector_match/: main.py
backend/src/vector_match/api/: deps.py  schemas.py
backend/src/vector_match/core/: config.py  exceptions.py  security.py  text.py
backend/src/vector_match/db/: base.py  models.py  session.py
backend/src/vector_match/providers/: embedding.py  rerank.py
backend/src/vector_match/repositories/: api_keys.py  collections.py  data.py  datasets.py  members.py  search.py  tasks.py  users.py
backend/src/vector_match/services/: api_keys.py  collections.py  data.py  datasets.py  fusion.py  members.py  search.py  users.py
backend/tests/: conftest.py  test_api_app.py  test_api_collections_data.py  test_api_keys.py  test_api_search.py  test_auth.py  test_collection_repository.py  test_config.py  test_data_repository.py  test_data_service.py  test_dataset_collection_services.py  test_dataset_repository.py  test_db_session.py  test_embedding_client.py  test_fusion.py  test_members.py  test_models.py  test_rerank_client.py  test_search_repository.py  test_search_service.py  test_smoke.py  test_task_repository.py  test_text.py  test_worker.py
web/: .dockerignore  (+4 more)
(+63 files in other folders)
