[project]
name = "vector-match"
version = "0.1.0"
description = "通用化文本匹配服务：语义/全文/混合检索 + 重排"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "jieba>=0.42.1",
    "alembic>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "asgi-lifespan>=2.1",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_match"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008", "E501"]  # B008: FastAPI Depends 惯用法；E501: 行宽交给人工控制
